--- a/src/NeoGeo Cart/ap_core.qsf
+++ b/src/NeoGeo Cart/ap_core.qsf
@@ -42,7 +42,7 @@
 # ========================
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:31:36  JANUARY 22, 2020"
-set_global_assignment -name LAST_QUARTUS_VERSION "21.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Standard Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:apf/build_id_gen.tcl"
 set_global_assignment -name SMART_RECOMPILE ON
@@ -809,5 +809,5 @@ set_global_assignment -name QIP_FILE Mem_card_APF.qip
 set_global_assignment -name QIP_FILE BACKUP_APF.qip
 set_global_assignment -name VERILOG_FILE core/NeoGeoCore/mem/SRAM_CONTROLLER_NEOGEO.v
 set_global_assignment -name SIGNALTAP_FILE NES.stp
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
